--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>GROWING: Geophysical Roots Observation for Water SavING</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
