--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@
 <h1>GROWING: Geophysical Roots Observation for Water SavING</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+  
+<footer>
+    <!-- Put your footer here -->
+</footer>
+  
 </html>
