Update about content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>Rapid</span></a></h1>
+        <h1 class="text-light"><a href="#intro" class="scrollto"><span></span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -131,14 +131,22 @@
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
               <h2>About Us</h2>
-              <h3>Odio sed id eos et laboriosam consequatur eos earum soluta.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Aut dolor id. Sint aliquam consequatur ex ex labore. Et quis qui dolor nulla dolores neque. Aspernatur consectetur omnis numquam quaerat. Sed fugiat nisi. Officiis veniam molestiae. Et vel ut quidem alias veritatis repudiandae ut fugit. Est ut eligendi aspernatur nulla voluptates veniam iusto vel quisquam. Fugit ut maxime incidunt accusantium totam repellendus eum error. Et repudiandae eum iste qui et ut ab alias.</p>
+              <h3>Objective</h3>
+              <p>GROWING is a project dealing with the use of minimally invasive methods for roots monitoring, with the specific aim of improving water use in arboriculture, viticulture and agronomy. The aim of GROWING is to develop our capability of understanding, through measuring and modeling, the actions of the root system on water state and fluxes in the soil-plant-atmosphere system. This is particularly critical in areas of water scarcity, such as the Mediterranean region.</p>
+              <p>GROWING is based upon three scientific pillars: (a) an advanced plant root phenotyping technology using geophysical methods, overcoming current limitation in imaging roots under field working conditions; (b) a coupled above and below-ground monitoring using geophysical, plant physiology and atmospheric measurements and (c) a data assimilation scheme that uses the data above to construct a hydrogeophysical model of water distribution in soil and exchanges with the atmosphere.</p>
+              <p>The scientific developments above will then foster the design of new tools and services for arboriculture, viticulture and agronomy with the ambition to transfer innovative knowledge to stakeholders, farmers, and winemakers in particular. The ground breaking nature of GROWING lies in the pooling of human, technical, and data resources, in order to better understand the hydric stress and roots response under a range of soil and agricultural practices.</p>
+              <p>In order to warrant effective dissemination of the project’s results, I will work both with academic partners, the university in Padua (UNIPD) and the Lawrence Berkeley National Lab (LBNL) during the outgoing phase, and with farmers and stakeholders thanks to private companies’ collaboration (FruitionSciences, Noble research institute). A two- way knowledge transfer is expected, with novel practical solutions to be developed in order to make non-invasive geophysical methods a state-of-the-art practice particularly in high-value crops.</p>
+              <h3>Field of Science</h3>
               <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="ion-android-checkmark-circle"></i> geophysics, viticulture, agronomy, physiology</li>
+                <li><i class="ion-android-checkmark-circle"></i> public services, sustainable economy, crops</li>
               </ul>
+              <h3>Programme</h3>
+              H2020-EU.1.3.2. - Nurturing excellence by means of cross-border and cross-sector mobility
+              <h3>Topic</h3>
+              MSCA-IF-2018 - Individual Fellowships
+              <h3>Funding Scheme</h3>
+              MSCA-IF-GF - Global Fellowships
             </div>
           </div>
         </div>
