--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="img/intro-img.svg" alt="" class="img-fluid">
+          <img src="img/Intro/IntroImg.png" alt="" class="img-fluid">
         </div>
       </div>
 
@@ -130,7 +130,7 @@
 
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
-              <h2>About Us</h2>
+              <h2>About</h2>
               <h3>Objective</h3>
               <p>GROWING is a project dealing with the use of minimally invasive methods for roots monitoring, with the specific aim of improving water use in arboriculture, viticulture and agronomy. The aim of GROWING is to develop our capability of understanding, through measuring and modeling, the actions of the root system on water state and fluxes in the soil-plant-atmosphere system. This is particularly critical in areas of water scarcity, such as the Mediterranean region.</p>
               <p>GROWING is based upon three scientific pillars: (a) an advanced plant root phenotyping technology using geophysical methods, overcoming current limitation in imaging roots under field working conditions; (b) a coupled above and below-ground monitoring using geophysical, plant physiology and atmospheric measurements and (c) a data assimilation scheme that uses the data above to construct a hydrogeophysical model of water distribution in soil and exchanges with the atmosphere.</p>
@@ -144,9 +144,9 @@
               <h3>Programme</h3>
               H2020-EU.1.3.2. - Nurturing excellence by means of cross-border and cross-sector mobility
               <h3>Topic</h3>
-              MSCA-IF-2018 - Individual Fellowships
+              <p>MSCA-IF-2018 - Individual Fellowships</p>
               <h3>Funding Scheme</h3>
-              MSCA-IF-GF - Global Fellowships
+              <p>MSCA-IF-GF - Global Fellowships</p>
             </div>
           </div>
         </div>
@@ -156,13 +156,13 @@
 
 
     <!--==========================
-      Services Section
+      Publication Section
     ============================-->
-    <section id="services" class="section-bg">
+    <section id="publications" class="section-bg">
       <div class="container">
 
         <header class="section-header">
-          <h3>Services</h3>
+          <h3>Publications</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
@@ -219,13 +219,13 @@
     </section><!-- #services -->
 
     <!--==========================
-      Why Us Section
+      Blog Section
     ============================-->
-    <section id="why-us" class="wow fadeIn">
+    <section id="blog" class="wow fadeIn">
       <div class="container-fluid">
         
         <header class="section-header">
-          <h3>Why choose us?</h3>
+          <h3>Blog</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
