--- a/index.html
+++ b/index.html
@@ -597,14 +597,18 @@
               <img src="img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Benjamin Mary</h4>
+                  <h4>Benjamin Mary
+<!--                     <a href="http://bmarygeophy.weebly.com/"><i class="fa fa-twitter"></i></a
+                    <button type="button" class="btn btn-outline-primary">Primary</button> -->
+                    <a href="http://bmarygeophy.weebly.com" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>
+                  </h4>
                   <span>Principal researcher</span>
-                  <div class="social">
+<!--                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
