--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#publications">Publications</a></li>
-          <li><a href="blog/blog.html">Blog</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#team">Team</a></li>
   <!--           <li class="drop-down"><a href="">Drop Down</a>
               <ul>
@@ -175,10 +175,9 @@
     <!--==========================
       Blog Section
     ============================-->
-<!--     <section id="blog" class="wow fadeIn">
-      <a href="content/page2.html">
-
-    </section> -->
+    <section id="blog" class="wow fadeIn">
+      <div w3-include-html="blog/blog.html"></div>
+    </section>
 
     <!--==========================
       Call To Action Section
