--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
       Blog Section
     ============================-->
     <section id="blog" class="wow fadeIn">
+        <header class="section-header">
+          <h3>Blog</h3>
+        </header>
       <div w3-include-html="blog/blog.html"></div>
     </section>
 
