--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
+  <link href="/blog/blog.html" rel="import" />
+
   <!-- =======================================================
     Theme Name: Rapid
     Theme URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
@@ -65,7 +67,11 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#publications">Publications</a></li>
-          <li><a href="#blog">Blog</a></li>
+          <li><a href="#blog">Outputs</a></li>
+                  <ul>
+                    <li><a href="#">WP1</a></li>
+                    <li><a href="#">WP2</a></li>
+                  </ul>
           <li><a href="#team">Team</a></li>
   <!--           <li class="drop-down"><a href="">Drop Down</a>
               <ul>
@@ -175,12 +181,6 @@
     <!--==========================
       Blog Section
     ============================-->
-    <section id="blog" class="wow fadeIn">
-        <header class="section-header">
-          <h3>Blog</h3>
-        </header>
-      <div w3-include-html="blog/blog.html"></div>
-    </section>
 
     <!--==========================
       Call To Action Section
