--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <link href="/blog/blog.html" rel="import" />
+  <link href="blog.html" rel="import" />
 
   <!-- =======================================================
     Theme Name: Rapid
@@ -67,11 +67,11 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#publications">Publications</a></li>
-          <li><a href="#blog">Outputs</a></li>
-                  <ul>
+          <li><a href="blog.html">Blog</a></li>
+<!--                   <ul>
                     <li><a href="#">WP1</a></li>
                     <li><a href="#">WP2</a></li>
-                  </ul>
+                  </ul> -->
           <li><a href="#team">Team</a></li>
   <!--           <li class="drop-down"><a href="">Drop Down</a>
               <ul>
