--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="img/Intro/IntroImg.png" alt="" class="img-fluid">
-        </div>
+<!--           <img src="img/Intro/IntroImg.png" alt="" class="img-fluid">
+ -->        </div>
       </div>
 
     </div>
@@ -130,7 +130,7 @@
 
           <div class="col-lg-5 col-md-6">
             <div class="about-img">
-              <img src="img/about-img.jpg" alt="">
+              <img src="img/Intro/IntroImg_vert.png" alt="">
             </div>
           </div>
 
