--- a/index.html
+++ b/index.html
@@ -148,11 +148,14 @@
                 <li><i class="ion-android-checkmark-circle"></i> public services, sustainable economy, crops</li>
               </ul>
               <h3>Programme</h3>
-              H2020-EU.1.3.2. - Nurturing excellence by means of cross-border and cross-sector mobility
+              <p>H2020-EU.1.3.2. - Nurturing excellence by means of cross-border and cross-sector mobility</p>
               <h3>Topic</h3>
               <p>MSCA-IF-2018 - Individual Fellowships</p>
               <h3>Funding Scheme</h3>
               <p>MSCA-IF-GF - Global Fellowships</p>
+              <p>
+                <a href="https://cordis.europa.eu/project/id/842922" class="btn btn-outline-primary" role="button" aria-pressed="true">Find out more: EU website</a>
+              </p>
 
 <!--               https://cordis.europa.eu/project/id/842922
  -->
@@ -428,7 +431,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/team-1.jpg" class="img-fluid" alt="">
+              <img src="img/photoMe2.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Benjamin Mary
