--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
           <li><a href="#about">About</a></li>
           <li><a href="#publications">Publications</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li class="drop-down"><a href="">Blog2</a>
+          <li class="drop-down"><a href="">Project</a>
               <ul>
+                <li><a href="#">Study areas</a></li>
                 <li><a href="#">WP1</a></li>
                 <li><a href="#">WP2</a></li>
               </ul>
@@ -191,7 +192,7 @@
         <div class="section-header">
           <h3>Contributors</h3>
 <!--           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
- -->        </div>
+ -->    </div>
 
         <div class="row">
 
@@ -241,9 +242,10 @@
       </div>
     </section> --><!-- #team
 
+
   </main>
 
-  <!--==========================
+  ==========================
     Footer
   ============================-->
 <!--   <footer id="footer" class="section-bg">
