--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
           <div class="col-lg-5 col-md-6">
             <div class="about-img">
-              <img src="img/Intro/IntroImg_vert.png" alt="">
+              <img src="img/Intro/IntroImg_vert.png" alt="Sensors position around a plant">
             </div>
           </div>
 
