--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <link href="blog.html" rel="import" />
+  <link href="biblio.html" rel="import">
 
+<!--   <link href="blog.html" rel="import" />
+ -->
   <!-- =======================================================
     Theme Name: Rapid
     Theme URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
@@ -67,12 +69,13 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#publications">Publications</a></li>
-          <li><a href="blog.html">Blog</a></li>
+<!--           <li><a href="blog.html">Blog</a></li>
+ -->          
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#">Study areas</a></li>
-                <li><a href="#">WP1</a></li>
-                <li><a href="#">WP2</a></li>
+<!--                 <li><a href="#">WP1</a></li>
+                <li><a href="#">WP2</a></li> -->
               </ul>
           </li>
           <li><a href="#team">Team</a></li>
@@ -179,6 +182,9 @@
         <header class="section-header">
           <h3>Publications</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <object data="biblio.html"> 
+              Your browser doesn’t support the object tag. 
+          </object>
         </header>
 
       </div>
