--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </div> -->
 
       </div>
-    </section> --><!-- #team
+    </section><!-- #team
 
 
   </main>
@@ -355,7 +355,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <div class="container">
       <div class="copyright">
