--- a/index.html
+++ b/index.html
@@ -182,9 +182,13 @@
         <header class="section-header">
           <h3>Publications</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
-          <object data="biblio.html"> 
+            <div class="csl-entry" style="margin-bottom: 1em;">Boaga, J., D’Alpaos, A., Cassiani, G., Marani, M. and Putti, M.: Plant-soil interactions in salt marsh environments: Experimental evidence from electrical resistivity tomography in the Venice Lagoon: PLANT-SOIL INTERACTIONS IN SALT-MARSH, Geophysical Research Letters, 41(17), 6160–6166, doi:<a href="https://doi.org/10.1002/2014GL060983">10.1002/2014GL060983</a>, 2014.</div>
+            <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=info%3Adoi%2F10.1002%2F2014GL060983&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Plant-soil%20interactions%20in%20salt%20marsh%20environments%3A%20Experimental%20evidence%20from%20electrical%20resistivity%20tomography%20in%20the%20Venice%20Lagoon%3A%20PLANT-SOIL%20INTERACTIONS%20IN%20SALT-MARSH&amp;rft.jtitle=Geophysical%20Research%20Letters&amp;rft.volume=41&amp;rft.issue=17&amp;rft.aufirst=Jacopo&amp;rft.aulast=Boaga&amp;rft.au=Jacopo%20Boaga&amp;rft.au=Andrea%20D'Alpaos&amp;rft.au=Giorgio%20Cassiani&amp;rft.au=Marco%20Marani&amp;rft.au=Mario%20Putti&amp;rft.date=2014-09-16&amp;rft.pages=6160-6166&amp;rft.spage=6160&amp;rft.epage=6166&amp;rft.issn=00948276&amp;rft.language=en"></span>
+            <div class="csl-entry" style="margin-bottom: 1em;">Cassiani, G., Boaga, J., Vanella, D., Perri, M. T. and Consoli, S.: Monitoring and modelling of soil–plant interactions: the joint use of ERT, sap flow and eddy covariance data to characterize the volume of an orange tree root zone, Hydrology and Earth System Sciences, 19(5), 2213–2225, doi:<a href="https://doi.org/10.5194/hess-19-2213-2015">10.5194/hess-19-2213-2015</a>, 2015.</div>
+            <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=info%3Adoi%2F10.5194%2Fhess-19-2213-2015&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Monitoring%20and%20modelling%20of%20soil%E2%80%93plant%20interactions%3A%20the%20joint%20use%20of%20ERT%2C%20sap%20flow%20and%20eddy%20covariance%20data%20to%20characterize%20the%20volume%20of%20an%20orange%20tree%20root%20zone&amp;rft.jtitle=Hydrology%20and%20Earth%20System%20Sciences&amp;rft.volume=19&amp;rft.issue=5&amp;rft.aufirst=G.&amp;rft.aulast=Cassiani&amp;rft.au=G.%20Cassiani&amp;rft.au=J.%20Boaga&amp;rft.au=D.%20Vanella&amp;rft.au=M.%20T.%20Perri&amp;rft.au=S.%20Consoli&amp;rft.date=2015-05-08&amp;rft.pages=2213-2225&amp;rft.spage=2213&amp;rft.epage=2225&amp;rft.issn=1607-7938&amp;rft.language=en"></span>
+<!--           <object data="biblio.html"> 
               Your browser doesn’t support the object tag. 
-          </object>
+          </object> -->
         </header>
 
       </div>
