--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
                   </div> -->
                 </div>
               </div>
+                <a style="font-size:2em; text-decoration: none" href="https://scholar.google.com/citations?user=3kDP4-AAAAAJ&hl=en" class="mr-2" data-toggle="tooltip" data-placement="bottom" title="Google Scholar">
+                <i class="fab fa-google" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> 
+              </a>
             </div>
           </div>
 
