--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- academicons CSS File -->
+  <link rel="stylesheet" href="css/academicons.min.css"/>
+  
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
