--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- academicons CSS File -->
-  <link rel="stylesheet" href="css/academicons.min.css"/>
+<!--   <link href="css/academicons.min.css" rel="stylesheet">
+ -->  
+  <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -235,7 +237,7 @@
                 <a style="font-size:2em; text-decoration: none" href="https://scholar.google.com/citations?user=3kDP4-AAAAAJ&hl=en" class="mr-2" data-toggle="tooltip" data-placement="bottom" title="Google Scholar">
                 <i class="fab fa-google" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> 
                 </a>
-                
+
 <!--           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
               <img src="img/team-2.jpg" class="img-fluid" alt="">
