--- a/index.html
+++ b/index.html
@@ -232,12 +232,11 @@
                 </div>
               </div>
             </div>
-          </div>
-          Test
                 <a style="font-size:2em; text-decoration: none" href="https://scholar.google.com/citations?user=3kDP4-AAAAAJ&hl=en" class="mr-2" data-toggle="tooltip" data-placement="bottom" title="Google Scholar">
-                <i class="fab fa-google" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> 
-                <i class="ai ai-google-scholar-square ai-3x"></i>
+<!--                 <i class="fab fa-google" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> 
+ -->                <i class="ai ai-google-scholar-square ai-3x" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
                 </a>
+          </div>
 
 <!--           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
