--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <!--==========================
       Publication Section
     ============================-->
-    <section id="publications" class="section-bg">
+    <section id="call-to-action" class="section-bg">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
