--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>GROWING MSCA project</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Geophysics, Roots, Water, Irrigation, Benjamin Mary, MSCA, Marie-Curie, Padova, Berkeley" name="keywords">
+  <meta content="GROWING MSCA project website" name="description">
+  <meta name="author" content="Benjamin Mary">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -42,6 +43,13 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+
+  <!--==========================
+  Include a map
+  ============================-->
+<!--  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+ -->  <!-- Nous chargeons les fichiers CDN de Leaflet. Le CSS AVANT le JS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
 </head>
 
 <body>
@@ -78,7 +86,7 @@
  -->          
           <li class="drop-down"><a href="">Project</a>
               <ul>
-                <li><a href="#">Study areas</a></li>
+                <li><a href="#studyAreas">Study areas</a></li>
 <!--                 <li><a href="#">WP1</a></li>
                 <li><a href="#">WP2</a></li> -->
               </ul>
@@ -122,8 +130,8 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-<!--           <img src="img/Intro/IntroImg.png" alt="" class="img-fluid">
- -->        </div>
+          <img src="img/Intro/Framework_Intro.png" alt="" class="img-fluid">
+        </div>
       </div>
 
     </div>
@@ -199,6 +207,37 @@
       </div>
     </div>
     </section><!-- #Publications -->
+
+
+    <!--==========================
+      Field sites
+    ============================-->
+    <!--The div element for the map -->
+    <section id="studyAreas" class="section-bg">
+
+
+    <div class="container">
+        <div class="row">
+          <div class="studyAreas-content">
+<!--             <div class="col-lg-5 col-md-6">
+ -->            <h2>Geophysical Observation Field sites catalog</h2>
+            <h3>Objectives</h3>
+            <ul>
+              <li><i class="ion-android-checkmark-circle"></i> Build a repository that is trust by the community and that is a preffered storage facility</li>
+              <li><i class="ion-android-checkmark-circle"></i> Gather datasets needed for modeling </li>
+              <li><i class="ion-android-checkmark-circle"></i> Create synergies </li>
+              <li><i class="ion-android-checkmark-circle"></i> Finding easily georeferenced data-sets linked to research themes </li>
+              <li><i class="ion-android-checkmark-circle"></i> Facilitate communication to stakeholders </li>
+            </ul>
+<!--             </div> 
+ -->          <div class="col-lg-7 col-md-6">
+            <div id="map" style="width: 600px; height: 400px;"></div>
+          </div>
+         </div> 
+
+
+    </section><!-- #Publications -->
+
 
     <!--==========================
       Team Section
@@ -276,7 +315,7 @@
     <div class="footer-top">
 <!--              <div class="form">
  -->              
-              <h4><a href=mailto:<nowiki>benjamin.mary@unipd.it?subject="Question MSCA GROWING">Click here to send us an email!</a></h4>
+              <h4><a href="mailto:benjamin.mary@unipd.it?subject=Question MSCA GROWING"> Click here to send us an email! </a></h4>
 <!--               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -347,6 +386,48 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
+  <!-- Template map Javascript File -->
+ <!-- Fichiers Javascript -->
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <script type="text/javascript">
+
+            // On initialise la latitude et la longitude de Paris (centre de la carte)
+            var lat = 48.852969;
+            var lon = 2.349903;
+            var macarte = null;
+            // Fonction d'initialisation de la carte
+            var villes = {
+              "Padua": { "lat": 45.40797, "lon": 11.88586 },
+              "Bordeaux": { "lat": 44.836151, "lon": -0.580816 },
+              "Berkeley": { "lat":  37.871666, "lon": -122.272781 },
+            };
+
+            // Fonction d'initialisation de la carte
+            function initMap() {
+              // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
+              macarte = L.map('map').setView([lat, lon], 2);
+              // macarte.fitBounds(); // Nous demandons à ce que tous les marqueurs soient visibles, et ajoutons un padding (pad(0.5)) pour que les marqueurs ne soient pas coupés
+
+              // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
+              L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                // Il est toujours bien de laisser le lien vers la source des données
+                attribution: 'données © OpenStreetMap/ODbL - rendu OSM France',
+                minZoom: 1,
+                maxZoom: 20
+              }).addTo(macarte);
+              // Nous parcourons la liste des villes
+              for (ville in villes) {
+                var marker = L.marker([villes[ville].lat, villes[ville].lon]).addTo(macarte);
+              }                 
+            }
+            window.onload = function(){
+    // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
+    // var marker = L.marker([lat, lon]).addTo(macarte);
+
+    initMap(); 
+            };
+        </script>
 
 </body>
 </html>
