--- a/index.html
+++ b/index.html
@@ -91,24 +91,11 @@
                 <li><a href="#">WP2</a></li> -->
               </ul>
           </li>
-          <li><a href="#team">Team</a></li>
-  <!--           <li class="drop-down"><a href="">Drop Down</a>
+          <li class="drop-down"><a href="team">Team</a>
               <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="drop-down"><a href="#">Drop Down 2</a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-                <li><a href="#">Drop Down 5</a></li>
+                <li><a href="#projectPartners">Project partners</a></li>
               </ul>
-            </li> -->
+          </li>
           <li><a href="#footer">Contact</a></li>
         </ul>
       </nav><!-- .main-nav -->
@@ -130,7 +117,7 @@
         </div>
   
         <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="img/Intro/Framework_Intro.png" alt="" class="img-fluid">
+          <img src="img/intro/Framework_Intro.png" alt="" class="img-fluid">
         </div>
       </div>
 
@@ -149,7 +136,7 @@
 
           <div class="col-lg-5 col-md-6">
             <div class="about-img">
-              <img src="img/Intro/IntroImg_vert.png" alt="Sensors position around a plant">
+              <img src="img/intro/IntroImg_vert.png" alt="Sensors position around a plant">
             </div>
           </div>
 
@@ -253,7 +240,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="img/photoMe2.png" class="img-fluid" alt="">
+              <img src="img/photoMe1.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Benjamin Mary
@@ -303,12 +290,37 @@
         </div> -->
 
       </div>
-    </section><!-- #team
+    </section><!-- #team-->
 
+    <!-- ==========================
+      Project partner Section
+    ============================-->
+    <section id="projectPartners" class="wow fadeInUp">
+      <div class="container">
+
+        <header class="section-header">
+          <h3>Project partners</h3>
+        </header>
+
+        <div class="owl-carousel clients-carousel">
+          <img src="img/partners/Fruition science.png" alt="">
+          <img src="img/partners/Berkeley Lab logo.png" alt="">
+          <img src="img/partners/unipa.jpg" alt="">
+<!--           <img src="img/clients/client-2.png" alt="">
+          <img src="img/clients/client-3.png" alt="">
+          <img src="img/clients/client-4.png" alt="">
+          <img src="img/clients/client-5.png" alt="">
+          <img src="img/clients/client-6.png" alt="">
+          <img src="img/clients/client-7.png" alt="">
+          <img src="img/clients/client-8.png" alt=""> -->
+        </div>
+
+      </div>
+    </section><!-- #clients -->
 
   </main>
 
-  ==========================
+ <!--  ==========================
     Footer
   ============================-->
   <footer id="footer" class="section-bg">
