--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#studyAreas">Study areas</a></li>
-<!--                 <li><a href="#">WP1</a></li>
-                <li><a href="#">WP2</a></li> -->
+                <li><a href="#">WP1</a></li>
+                <li><a href="#">WP2</a></li>
+                <li><a href="#">WP3</a></li>
+                <li><a href="#">WP4</a></li>
+                <li><a href="#">Related works</a></li>
               </ul>
           </li>
-          <li class="drop-down"><a href="team">Team</a>
+          <li class="drop-down"><a href="team">About us</a>
               <ul>
+                <li><a href="#contributors">Contributors</a></li>
                 <li><a href="#projectPartners">Project partners</a></li>
               </ul>
           </li>
@@ -136,7 +140,13 @@
 
           <div class="col-lg-5 col-md-6">
             <div class="about-img">
-              <img src="img/intro/IntroImg_vert.png" alt="Sensors position around a plant">
+              <p>
+                <img src="img/intro/IntroImg_vert.png" alt="Sensors position around a plant">
+                <h6>3D position of sensors around the plant and simulation showing the distribution of current voltage after a current stimuli into the root system</h6>
+              </p>
+              <p>
+                <img src="img/intro/marie_curie-logo-400px.jpg" alt="marie_curie-logo-400px">
+              </p>
             </div>
           </div>
 
@@ -229,7 +239,7 @@
     <!--==========================
       Team Section
     ============================-->
-    <section id="team" class="section-bg">
+    <section id="contributors" class="section-bg">
       <div class="container">
         <div class="section-header">
           <h3>Contributors</h3>
