--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="col-lg-5 col-md-6">
             
 <!--             <h2>Geophysical Observation Field sites catalog</h2>
- -->            <h3>Objectives</h3>
+ -->            <h3>Objectives </h3>
             <ul>
 <!--               <li><i class="ion-android-checkmark-circle"></i> Build a repository that is trust by the community and that is a preffered storage facility</li>
  -->              <li> Gather datasets needed for modeling </li>
@@ -229,8 +229,8 @@
             </div> 
           
             <div class="col-lg-7 col-md-6">
-<!--                 Catalog of georeferenced metadatas
- -->
+                Map of the geophysical roots observation field sites 
+
             <div id="map" style="width: 600px; height: 400px;"></div>
           </div>
 <!--          </div> 
