change msca logo size

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                 <h6>3D position of sensors around the plant and simulation showing the distribution of current voltage after a current stimuli into the root system</h6>
               </p>
               <p>
+                <div class="msca-logo">
                 <img src="img/intro/marie_curie-logo-400px.jpg" alt="marie_curie-logo-400px">
+                </div>
               </p>
             </div>
           </div>
