1st published version

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
  -->          
           <li class="drop-down"><a href="">Project</a>
               <ul>
-                <li><a href="#studyAreas">Study areas</a></li>
+                <li><a href="#studyAreas">Study areas catalog</a></li>
                 <li><a href="#wp1">WP1</a></li>
                 <li><a href="#wp2">WP2</a></li>
                 <li><a href="#wp3">WP3</a></li>
@@ -273,6 +273,23 @@
 
     </section><!-- #wp1 -->
 
+    <section id="wp4" class="section-bg">
+    <div class="container">
+        <div class="row">
+          <div class="wp4-content">
+          <h3>WP4</h3>
+<!--         <p>
+          <strong>WP4 </strong>aims at disseminating the gained knowledge across all communities (<em>Goal 5</em>). We plan four deliverables:</p> -->
+          <ul>
+            <li><i class="ion-android-checkmark-circle"></i> Data management plan: gather dataset of partner research teams in an open web platform.</li>
+<!--             <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards peers.</li>
+            <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards students, winemakers and farmers.</li> -->
+          </ul>
+         </div> 
+      </div> 
+    </div> 
+
+    </section><!-- #wp4 -->
 
 <!--       </section>
  -->
@@ -292,14 +309,9 @@
         </ul>
       </section>
 
-      <section id="wp4" class="section-bg">
-        <p><strong>WP4 </strong>aims at disseminating the gained knowledge across all communities (<em>Goal 5</em>). We plan four deliverables:</p>
-          <ul>
-            <li><i class="ion-android-checkmark-circle"></i> Data management plan: gather dataset of partner research teams in an open web platform.</li>
-            <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards peers.</li>
-            <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards students, winemakers and farmers.</li>
-          </ul>
-      </section>
+
+
+
 
 
 
