add google analytics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <meta content="GROWING MSCA project website" name="description">
   <meta name="author" content="Benjamin Mary">
 
+
+
+   <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=TRACKING_ID"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-156846585-1');
+  </script>
+
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -37,7 +49,9 @@
   Include html files
   ============================-->
   <!-- Main bibliography  -->
-  <link href="biblio.html" rel="import">
+<!--   <link href="biblio.html" rel="import">
+ --><!--   <link href="Leaflet_Catalog_page/MapIndex.php" rel="import">
+ -->
 <!--   <link href="map_test/indexmap.html" rel="import">
  -->
   <!--==========================
@@ -85,6 +99,7 @@
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#studyAreas">Study areas catalog</a></li>
+<!--                 <li><a href="#LeafletCatalog">Data Catalog</a></li> -->
                 <li><a href="#wp1">WP1</a></li>
                 <li><a href="#wp2">WP2</a></li>
                 <li><a href="#wp3">WP3</a></li>
