--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <meta content="GROWING MSCA project website" name="description">
   <meta name="author" content="Benjamin Mary">
 
-
-
    <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=TRACKING_ID"></script>
 
@@ -466,18 +464,17 @@
  -->    </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>Rapid</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Rapid
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+          <div class="copyright">
+            <p>
+              This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 842922.
+            </p>
+          </div>
+          <div class="copyright">
+            &copy; Copyright <strong>Rapid</strong>. All Rights Reserved
+          </div>
+          <div class="credits">
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div>
     </div>
   </footer><!-- #footer -->
 
