--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
     <section id="publications" class="section-bg">
       <div class="container">
         <div class="row">
+          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+
+        <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Publications</h3>
             <p class="cta-text"> 
@@ -224,7 +228,6 @@
     ============================-->
     <!--The div element for the map -->
     <section id="studyAreas" class="section-bg">
-
 
     <div class="container">
         <div class="row">
