new div class to media

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <li><a href="#publications">Publications</a></li>
 <!--           <li><a href="blog.html">Blog</a></li>
  -->          
-          <li>><a href="#media">Media</a></li>    
+          <li><a href="#media">Media</a></li>    
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#studyAreas">Study areas catalog</a></li>
@@ -196,16 +196,36 @@
 
     </section><!-- #about -->
   
+       <div class="container">
+
+        <div class="row feature-item">
+          <div class="col-lg-6 wow fadeInUp">
+            <img src="img/features-1.svg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
+            <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
+            <p>
+              Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
+            </p>
+            <p>
+              Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
+            </p>
+          </div>
+        </div>
+         
+         
     <!--==========================
       Media Section
     ============================-->
     <section id="media" class="section-bg">
       <div class="container">
-        <div class="row">
+        <div class="row feature-item">
           <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-       <div class="row">
-         My interview to <a href="https://www.unipd.it/en/msca-mary" class="btn btn-outline-primary">SuccessStories@Unipd </a>    
+        <div class="row feature-item">
+         <p>
+         My interview to <a href="https://www.unipd.it/en/msca-mary" class="btn btn-outline-primary">SuccessStories@Unipd </a> 
+        </p>
       </div>
     </section>
 
