--- a/index.html
+++ b/index.html
@@ -220,12 +220,14 @@
     <section id="media" class="section-bg">
       <div class="container">
         <div class="row feature-item">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+             <div class="col-lg-6 wow fadeInUp">
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              </div>
         </div>
         <div class="row feature-item">
-         <p>
-         My interview to <a href="https://www.unipd.it/en/msca-mary" class="btn btn-outline-primary">SuccessStories@Unipd </a> 
-        </p>
+             <div class="col-lg-6 wow fadeInUp">
+                 My interview to <a href="https://www.unipd.it/en/msca-mary" class="btn btn-outline-primary">SuccessStories@Unipd </a> 
+              </div>
       </div>
     </section>
 
